--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
         'org.springframework.boot:spring-boot-starter-web',
         'org.springframework.boot:spring-boot-starter-jdbc',
         'org.springframework.boot:spring-boot-starter-data-jpa',
+        'org.springframework.boot:spring-boot-starter-thymeleaf',
     )
     runtimeOnly(
         'mysql:mysql-connector-java:8.0.30'
