--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,12 @@ repositories {
 dependencies {
     implementation (
         'org.springframework.boot:spring-boot-starter-web',
-        'org.springframework.boot:spring-boot-starter-data-jpa'
+        'org.springframework.boot:spring-boot-starter-jdbc',
+        'org.springframework.boot:spring-boot-starter-data-jpa',
     )
-    runtimeOnly('com.h2database:h2')
+    runtimeOnly(
+        'mysql:mysql-connector-java:8.0.30'
+    )
     compileOnly ('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
 
