--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,21 @@ dependencies {
         'org.springframework.boot:spring-boot-starter-jdbc',
         'org.springframework.boot:spring-boot-starter-data-jpa',
         'org.springframework.boot:spring-boot-starter-thymeleaf',
+        'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     )
+  
     runtimeOnly(
         'mysql:mysql-connector-java:8.0.30'
     )
+
     compileOnly ('org.projectlombok:lombok')
-    annotationProcessor('org.projectlombok:lombok')
+
+    annotationProcessor(
+        'org.projectlombok:lombok',
+        'com.querydsl:querydsl-apt:5.0.0:jakarta',
+        'jakarta.persistence:jakarta.persistence-api',
+        'jakarta.annotation:jakarta.annotation-api',
+    )
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.assertj:assertj-core:3.24.2'
