스프링시큐리티 의존성설정

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
         'org.springframework.boot:spring-boot-starter-web',
         'org.springframework.boot:spring-boot-starter-jdbc',
         'org.springframework.boot:spring-boot-starter-data-jpa',
+        'org.springframework.boot:spring-boot-starter-security',
         'org.springframework.boot:spring-boot-starter-thymeleaf',
+        'org.thymeleaf.extras:thymeleaf-extras-springsecurity6',
         'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     )
   
@@ -35,6 +37,7 @@ dependencies {
     )
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.assertj:assertj-core:3.24.2'
 }
 
