--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,14 @@ dependencies {
         'org.springframework.boot:spring-boot-starter-security',
         'org.springframework.boot:spring-boot-starter-thymeleaf',
         'org.thymeleaf.extras:thymeleaf-extras-springsecurity6',
+        'io.jsonwebtoken:jjwt-api:0.12.3',
         'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     )
   
     runtimeOnly(
-        'mysql:mysql-connector-java:8.0.30'
+        'mysql:mysql-connector-java:8.0.30',
+        'io.jsonwebtoken:jjwt-impl:0.12.3',
+        'io.jsonwebtoken:jjwt-jackson:0.12.3'
     )
 
     compileOnly ('org.projectlombok:lombok')
